# chimera

./: .gitignore  CHANGELOG.md  DEMO_VIDEO_SCRIPT.md  LINKEDIN_LAUNCH_POST.md  README.md  VIRAL_GROWTH_STRATEGY.md  conftest.py  default.nix  extract_pdf_text.py  main.py  pyproject.toml  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py
.github/workflows/: chimera.yml  ci.yml
chimera/: composition_root.py
chimera/infrastructure/: config.py  event_bus.py  logging.py
demo/: demo.nix  fleet_simulation.py  viral-demo-simple.py  viral-demo.sh
docs/: api-reference.md  architecture.md  cloud-providers.md  contributing.md  getting-started.md
tests/application/: test_autonomous_loop.py  test_deploy_fleet.py  test_execute_local.py  test_orchestration.py  test_rollback.py
tests/domain/: test_deployment.py  test_deployment_dtos.py  test_drift_detection.py  test_node.py  test_playbook.py  test_playbook_engine.py  test_policy.py  test_predictive_analytics.py  test_root_cause_analysis.py  test_slo.py  test_value_objects.py
tests/e2e/: test_cli_e2e.py  test_config_integration.py
tests/infrastructure/: test_agent_registry.py  test_chimera_agent.py  test_cloud_adapters.py  test_composition_root.py  test_config.py  test_event_bus.py  test_fabric_adapter.py  test_itsm_adapters.py  test_logging.py  test_mcp_server.py  test_mcp_transport.py  test_nix_adapter.py  test_notification_adapters.py  test_otel_exporter.py  test_sqlite_repository.py
tests/integration/: test_composition_root_wiring.py  test_deploy_flow.py  test_drift_healing_flow.py  test_local_deploy_flow.py
tests/presentation/: test_cli.py  test_web.py
(+61 files in other folders)
