[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "2.0.0"
description = "The Autonomous Determinism Engine - Self-healing infrastructure powered by Nix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Allan Smeyatsky", email = "allan@example.com"}
]
keywords = ["infrastructure", "nix", "deployment", "self-healing", "determinism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.optional-dependencies]
ssh = ["fabric>=3.0.0"]
tui = ["textual>=0.40.0"]
all = [
    "fabric>=3.0.0",
    "textual>=0.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
chimera = "chimera.presentation.cli.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "--tb=short"
